Added JWT authentication handler

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "This is my secret key that should be configured here @#$#@$#@%@#$@#$",
+    "Issuer": "https://accounts.google.com",
+    "Audience": "1234987819200.apps.googleusercontent.com",
+    "Subject": "10769150350006150715113082367"
+  }
 }
